# synacor

./: .travis.yml  Cargo.toml  README.md  watchman.sh
data/: answers  arch-spec  challenge.syn-asm  post-teleport-vm  post-teleporter-prog  running_prog  synacor-challenge.tgz  teleporter_book
doc/: ASSEMBLY.md
src/: address.rs  argument.rs  binary.rs  instruction.rs  lib.rs  register.rs  u15.rs  vm.rs
